objects/icrt__Guide_Definition__c.object
<CustomObject>
    <fields>
        <fullName>icrt__Applies_To__c</fullName>
        <label>Applies To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>icrt__Entry_ID__c</fullName>
        <label>Entry ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Filter_Expression__c</fullName>
        <label>Filter Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Guide_Design__c</fullName>
        <formula>IF(NOT(ISPICKVAL(icrt__Status__c, &apos;Deleted&apos;)),
HYPERLINK(&apos;/apex/icrt__AeDesigner?flowtoopen=&apos; + SUBSTITUTE(icrt__Entry_ID__c, &apos;+&apos;, &apos;%2B&apos;),  &apos;Open&apos;, &apos;AeGuideDesigner&apos;),
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guide Design</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Last_Published__c</fullName>
        <label>Last Published</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>icrt__Published_Contribution_ID__c</fullName>
        <label>Published Contribution ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Unpublished</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>icrt__Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Guide</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>